// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueSelectionFilter active - field is global 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={true}
      iconSide="right"
      iconType="arrowDown"
      numActiveFilters={0}
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__note"
  >
    <div
      className="ouiFilterSelect__noteContent"
    >
      <OuiLoadingChart
        size="m"
      />
      <OuiSpacer
        size="xs"
      />
      <p>
        Loading...
      </p>
    </div>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter active - fields in options 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__note"
  >
    <div
      className="ouiFilterSelect__noteContent"
    >
      <OuiLoadingChart
        size="m"
      />
      <OuiSpacer
        size="xs"
      />
      <p>
        Loading...
      </p>
    </div>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter inactive - field is global 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__items"
  >
    <OuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </OuiFilterSelectItem>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter inactive - fields in options 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__items"
  >
    <OuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </OuiFilterSelectItem>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter render - all configurations 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__note"
  >
    <div
      className="ouiFilterSelect__noteContent"
    >
      <OuiLoadingChart
        size="m"
      />
      <OuiSpacer
        size="xs"
      />
      <p>
        loading...
      </p>
    </div>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter render - fields in options 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__items"
  >
    <OuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </OuiFilterSelectItem>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter render - multi-select OR 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__note"
  >
    <div
      className="ouiFilterSelect__noteContent"
    >
      <OuiLoadingChart
        size="m"
      />
      <OuiSpacer
        size="xs"
      />
      <p>
        loading...
      </p>
    </div>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter render - options as a function 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__note"
  >
    <div
      className="ouiFilterSelect__noteContent"
    >
      <OuiLoadingChart
        size="m"
      />
      <OuiSpacer
        size="xs"
      />
      <p>
        Loading...
      </p>
    </div>
  </div>
</OuiPopover>
`;

exports[`FieldValueSelectionFilter render - options as an array 1`] = `
<OuiPopover
  anchorPosition="downCenter"
  button={
    <OuiFilterButton
      grow={true}
      hasActiveFilters={false}
      iconSide="right"
      iconType="arrowDown"
      onClick={[Function]}
    >
      Tag
    </OuiFilterButton>
  }
  closePopover={[Function]}
  display="inlineBlock"
  hasArrow={true}
  id="field_value_selection_0"
  isOpen={false}
  ownFocus={true}
  panelClassName="ouiFilterGroup__popoverPanel"
  panelPaddingSize="none"
>
  <div
    className="ouiFilterSelect__items"
  >
    <OuiFilterSelectItem
      key="0"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      feature
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="1"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      Text
    </OuiFilterSelectItem>
    <OuiFilterSelectItem
      key="2"
      onClick={[Function]}
      onKeyDown={[Function]}
      showIcons={true}
    >
      <div>
        bug
      </div>
    </OuiFilterSelectItem>
  </div>
</OuiPopover>
`;
